--- a/css/main.css
+++ b/css/main.css
@@ -53,8 +53,8 @@ p {
 }
 
 .info_ p {
-  font-size: 13px;
-  text-align: center;
+  font-size: 13px !important;
+  text-align: center !important;
   color: #a9a9a9;
   margin-bottom: 1rem;
 }
