--- a/css/main.css
+++ b/css/main.css
@@ -53,7 +53,7 @@ p {
 }
 
 .logo img {
-  width: 230px !important;
+  width: 230px;
   height: 78px;
   float: none;
 }
@@ -146,8 +146,6 @@ input:focus, textarea:focus, select:focus {
 }
 
 img {
-  height: 100%;
-  width: 100%;
   margin: 0;
   float: right;
   object-fit: cover;
@@ -255,7 +253,7 @@ img {
   }
 
   .logo img {
-    width: 141px ​!important;
+    width: 141px;
     height: 46px;
   }
 
