--- a/css/main.css
+++ b/css/main.css
@@ -9,7 +9,7 @@ body {
   font-family: 'mainFont', sans-serif !important;
   font-size: 16px;
   box-sizing: content-box;
-  overflow: hidden;
+  overflow-x: hidden;
   background:url("../img/mainBG.jpg");
   background-size: cover;
   background-position: center;
@@ -49,7 +49,7 @@ h3 {
 }
 p {
   font-size: 1.3rem;
-  padding-left: 1rem;
+  /* padding-left: 1rem; */
 }
 
 .logo img {
@@ -246,6 +246,7 @@ img {
 
   #card-message {
     font-size: 11px;
+    bottom: 14%;
   }
 
   .info_ p:nth-child(2) {
